--- a/Styles/index.css
+++ b/Styles/index.css
@@ -49,13 +49,41 @@ meSnippet {
     font-style: normal;
 }
 
-hello{
+hello {
     block-size: 600px, 250px;
 }
 
 img.middleContainer {
     margin: 0;
 }
+
+.btn {
+    background: #0099ff;
+    background-image: -webkit-linear-gradient(top, #0099ff, #185378);
+    background-image: -moz-linear-gradient(top, #0099ff, #185378);
+    background-image: -ms-linear-gradient(top, #0099ff, #185378);
+    background-image: -o-linear-gradient(top, #0099ff, #185378);
+    background-image: linear-gradient(to bottom, #0099ff, #185378);
+    -webkit-border-radius: 9;
+    -moz-border-radius: 9;
+    border-radius: 9px;
+    text-shadow: 1px 1px 3px #666666;
+    font-family: Arial;
+    color: #51c2d5;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+
+    .btn:hover {
+        background: #3cb0fd;
+        background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+        background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+        text-decoration: none;
+    }
 
 .bottomContainer {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -66,4 +94,3 @@ img.middleContainer {
     vertical-align: middle;
     font-style: normal;
 }
-
