--- a/Styles/projects.css
+++ b/Styles/projects.css
@@ -31,7 +31,7 @@ div {
 }
 
 .feedbackForm {
-    vertical-align: middle;
+    vertical-align: initial;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     box-sizing: border-box;
 }
@@ -45,34 +45,6 @@ textarea {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/*.subBtn {
-    background: #0099ff;
-    background-image: -webkit-linear-gradient(top, #0099ff, #185378);
-    background-image: -moz-linear-gradient(top, #0099ff, #185378);
-    background-image: -ms-linear-gradient(top, #0099ff, #185378);
-    background-image: -o-linear-gradient(top, #0099ff, #185378);
-    background-image: linear-gradient(to bottom, #0099ff, #185378);
-    -webkit-border-radius: 9;
-    -moz-border-radius: 9;
-    border-radius: 9px;
-    text-shadow: 1px 1px 3px #666666;
-    font-family: Arial;
-    color: #51c2d5;
-    font-size: 20px;
-    padding: 10px 20px 10px 20px;
-    text-decoration: none;
-}
-
-subBtn:hover {
-    background: #3cb0fd;
-    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-    text-decoration: none;
-}*/
-
 .btn {
     background: #0099ff;
     background-image: -webkit-linear-gradient(top, #0099ff, #185378);
@@ -84,7 +56,7 @@ subBtn:hover {
     -moz-border-radius: 9;
     border-radius: 9px;
     text-shadow: 1px 1px 3px #666666;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial;
     color: #51c2d5;
     font-size: 20px;
     padding: 10px 20px 10px 20px;
